Revise meta tags and styles in index.html
Updated meta tags and styles in index.html for improved SEO and user experience.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" type="image/png" href="https://ktecheletronicos.github.io/ktechfiles/logo_k.png">
     
     <!-- Meta tags para WhatsApp e redes sociais -->
-    <meta property="og:title" content="KTech Eletrônicos e Importados">
-    <meta property="og:description" content="Pagamento seguro via PIX - KTech Eletrônicos e Importados">
+    <meta property="og:title" content="Pague via Pix na KTech Eletrônicos e Importados">
+    <meta property="og:description" content="Pagamento rápido e seguro via DePIX. Transferências instantâneas, seguras e sem burocracia usando PIX integrado à cripto.">
     <meta property="og:image" content="https://ktecheletronicos.github.io/ktechfiles/logo_ktech_eletronicos_compra_segura.png">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="KTech Eletrônicos">
@@ -402,7 +402,7 @@
 
         <div class="footer-info">
             <strong>KTech Eletrônicos e Importados</strong><br>
-            Pagamento 100% seguro e verificado automaticamente
+            Pagamentos seguros, rápidos e com validação automática
         </div>
     </div>
 
