Update print statement from 'Hello' to 'Goodbye'

--- a/teste_pag.html
+++ b/teste_pag.html
@@ -465,13 +465,13 @@
                 </div>
 
                 <div class="captcha-wrapper">
-                    <div class="h-captcha" data-sitekey="139a0e90-b508-479e-a21c-b3be02923856"></div>
+                    <div class="h-captcha" data-sitekey="50b2fe65-b00b-4b9d-ad62-3ba471098be2"></div>
                 </div>
                 <div class="captcha-error" id="captchaError">
                     ❌ Por favor, complete a verificação de segurança.
                 </div>
 
-                <button class="btn-generate" id="btnGenerate" onclick="generatePayment()">
+                <button class="btn-generate" id="btnGenerate">
                     Gerar Código PIX
                 </button>
             </div>
